--- a/cursor/.config/Cursor/User/settings.json
+++ b/cursor/.config/Cursor/User/settings.json
@@ -198,7 +198,13 @@
     "explorer.confirmDragAndDrop": false,
     "C_Cpp.intelliSenseEngine": "disabled",
     "cmake.copyCompileCommands": "${workspaceFolder}/compile_commands.json",
-    "terminal.integrated.defaultProfile.linux": "bash",
+    "terminal.integrated.profiles.linux": {
+        "zsh": {
+        "path": "/usr/bin/zsh",
+        "args": []
+        }
+    },
+    "terminal.integrated.defaultProfile.linux": "zsh",
     "remote.SSH.enableRemoteCommand": true,
     "remote.SSH.useLocalServer": true,
     "cSpell.allowCompoundWords": true,
