--- a/cursor/.config/Cursor/User/settings.json
+++ b/cursor/.config/Cursor/User/settings.json
@@ -198,13 +198,13 @@
     "explorer.confirmDragAndDrop": false,
     "C_Cpp.intelliSenseEngine": "disabled",
     "cmake.copyCompileCommands": "${workspaceFolder}/compile_commands.json",
-    "terminal.integrated.profiles.linux": {
-        "zsh": {
-        "path": "/usr/bin/zsh",
-        "args": []
-        }
-    },
-    "terminal.integrated.defaultProfile.linux": "zsh",
+    // "terminal.integrated.profiles.linux": {
+    //     "zsh": {
+    //     "path": "/usr/bin/zsh",
+    //     "args": []
+    //     }
+    // },
+    "terminal.integrated.defaultProfile.linux": "bash",
     "remote.SSH.enableRemoteCommand": true,
     "remote.SSH.useLocalServer": true,
     "cSpell.allowCompoundWords": true,
